[gd_scene load_steps=5 format=3 uid="uid://b4d7kw0y1m56q"]

[ext_resource type="Script" path="res://Scenes/Entities/NPC/DialogController.gd" id="1_bfl1h"]
[ext_resource type="Texture2D" uid="uid://cv3py6ogxh8ni" path="res://Scenes/Entities/NPC/NPC.png" id="2_okuoc"]
[ext_resource type="Script" path="res://Scenes/Entities/NPC/DialogOptions.gd" id="3_0ylio"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3xnb3"]
size = Vector2(158, 143)

[node name="Npc" type="Node2D"]
script = ExtResource("1_bfl1h")

[node name="Npc" type="Sprite2D" parent="."]
position = Vector2(2, -73)
scale = Vector2(0.175585, 0.161435)
texture = ExtResource("2_okuoc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, -73.5)
shape = SubResource("RectangleShape2D_3xnb3")

[node name="DialogInterface" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = -192.0
offset_top = -376.0
offset_right = 208.0
offset_bottom = -176.0

[node name="ScrollContainer" type="ScrollContainer" parent="DialogInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DialogInterface/ScrollContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DialogInterface/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="OptionsList" type="VBoxContainer" parent="DialogInterface/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DialogOptions" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_0ylio")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
